# justcode

./: Cargo.toml  README.md  TESTING.md
examples/: basic.rs
justcode-core/: Cargo.toml
justcode-core/src/: encode.rs  error.rs  lib.rs
justcode-core/tests/: integration_tests.rs  no_std_integration.rs  no_std_tests.rs
justcode-derive/: Cargo.toml  README.md
justcode-derive/src/: lib.rs
justcode-python/: Cargo.toml  pyproject.toml
justcode-python/tests/: test_justcode_python.py
scripts/: test_no_std.sh
