[workspace]
members = [
    "justcode-core",
    "justcode-derive"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Reynard Contributors"]
license = "MIT"
description = "Compact binary encoder/decoder with space-efficient encoding"

[workspace.dependencies]
# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Derive macros
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Testing
criterion = { version = "0.7.0", features = ["html_reports"] }

