[package]
name = "justcode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme = "../README.md"
keywords = ["serialization", "binary", "encoding", "decoding", "compact"]
categories = ["encoding", "no-std"]

[features]
default = ["std", "derive"]
std = []
derive = ["justcode-derive"]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
justcode-derive = { path = "../justcode-derive", version = "0.1.0", optional = true }

[dev-dependencies]
criterion.workspace = true

[[example]]
name = "basic"
path = "../examples/basic.rs"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
all = "warn"

